err/m3-simple-report.err
Listing '.'...
Listing './bin'...
Compiling './bin/runxlrd.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/m3_simple_report-1.3.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simple_report'...
Listing './lib/python3.5/site-packages/simple_report/converter'...
Listing './lib/python3.5/site-packages/simple_report/converter/open_office'...
Listing './lib/python3.5/site-packages/simple_report/core'...
Listing './lib/python3.5/site-packages/simple_report/docx'...
Compiling './lib/python3.5/site-packages/simple_report/docx/wordprocessing_ml.py'...
***   File "./lib/python3.5/site-packages/simple_report/docx/wordprocessing_ml.py", line 104
    def sorting_key((k, v)):
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/simple_report/rtf'...
Listing './lib/python3.5/site-packages/simple_report/xls'...
Compiling './lib/python3.5/site-packages/simple_report/xls/section.py'...
***   File "./lib/python3.5/site-packages/simple_report/xls/section.py", line 401
    self, write_coords, value, style, cell_type, (runlist, rdrowx, rdcolx)
                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/simple_report/xlsx'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/test_data'...
Listing './lib/python3.5/site-packages/tests/test_data/linux'...
Listing './lib/python3.5/site-packages/tests/test_data/linux/docx'...
Listing './lib/python3.5/site-packages/tests/test_data/linux/xls'...
Listing './lib/python3.5/site-packages/tests/test_data/linux/xlsx'...
Listing './lib/python3.5/site-packages/tests/test_data/rtf'...
Listing './lib/python3.5/site-packages/tests/test_data/win'...
Listing './lib/python3.5/site-packages/tests/test_data/win/xlsx'...
Compiling './lib/python3.5/site-packages/tests/test_oo_wrapper.py'...
***   File "./lib/python3.5/site-packages/tests/test_oo_wrapper.py", line 14
    print u'Тесты для OpenOffice не были запущены, '\
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/xlrd'...
Listing './lib/python3.5/site-packages/xlrd/examples'...
Listing './lib/python3.5/site-packages/xlrd-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/xlutils'...
Listing './lib/python3.5/site-packages/xlutils/tests'...
Listing './lib/python3.5/site-packages/xlutils-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/xlwt'...
Listing './lib/python3.5/site-packages/xlwt-1.3.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
